# Python-Template-SOA

./: .dockerignore  CHANGELOG.md  CONTAINER_GUIDE.md  CONTRIBUTING.md  Containerfile  Containerfile.algo  Containerfile.cli  Containerfile.webapp  EXAMPLES.md  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP.md  cliff.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/python_template/: __init__.py  main.py
tests/: __init__.py  test_main.py
